# text_processing

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_requests_perf.py
shared/: README.md  pyproject.toml
shared/shared/config/: __init__.py  config.py
shared/shared/db/: core.py  exceptions.py
shared/shared/db/models/: tasks.py
shared/shared/dist_tasks/consumer/: __init__.py  consumer.py
shared/shared/dist_tasks/producer/: __init__.py  producer.py
shared/shared/logging/: __init__.py  logging.py
shared/shared/utils/: __init__.py  utils.py
text_processing/task_processor/: main.py
text_processing/task_processor/task_processor/: consumer.py  text_utils.py
text_processing/web_api/: main.py
text_processing/web_api/web_api/: app.py
text_processing/web_api/web_api/dependencies/: auth.py  config.py  logging.py  tasks.py  users.py
text_processing/web_api/web_api/routers/: process_text.py  task_result.py
text_processing/web_api/web_api/schemas/: base_schema.py  process_text.py
